--- a/ToDoList/app/src/main/res/values/colors.xml
+++ b/ToDoList/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="saturated">#FF9E66B5</color>
 </resources>
