--- a/ToDoList/app/src/main/res/values/themes.xml
+++ b/ToDoList/app/src/main/res/values/themes.xml
@@ -3,6 +3,9 @@
     <style name="Base.Theme.ToDoList" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/saturated</item>
+        <item name="colorPrimaryVariant">@color/saturated</item>
+        <item name="colorOnPrimary">@color/white</item>
     </style>
 
     <style name="Theme.ToDoList" parent="Base.Theme.ToDoList" />
