--- a/ToDoList/app/src/main/res/layout/activity_upload.xml
+++ b/ToDoList/app/src/main/res/layout/activity_upload.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/addtask"
-    tools:context=".UploadActivity">
+    tools:context=".activity.UploadActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
