--- a/ToDoList/app/src/main/res/values/themes.xml
+++ b/ToDoList/app/src/main/res/values/themes.xml
@@ -7,6 +7,11 @@
         <item name="colorPrimaryVariant">@color/saturated</item>
         <item name="colorOnPrimary">@color/white</item>
     </style>
+    
+    <style name="roundedImageViewRounded">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
 
     <style name="Theme.ToDoList" parent="Base.Theme.ToDoList" />
 </resources>
