--- a/ToDoList/app/src/main/res/layout/activity_main.xml
+++ b/ToDoList/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,14 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycleView"
+        android:layout_below="@+id/toolbar"
+        android:scrollbars="vertical"/>
     
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
