--- a/CRUD Client/app/src/main/res/values/colors.xml
+++ b/CRUD Client/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="lavender">#FF8692F2</color>
 </resources>
